Updated types in operators, popmodels, parameter, mapping, fileio.